fixed some issues with alignments in some media queries

--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -196,12 +196,14 @@ footer div img {
 
 .footer-links ul li:first-child {
     font-weight: bold;
+
 }
 
 
 .footer-links-1,
 .footer-links-2 {
     display: flex;
+    margin: 0 auto 0 25%;    
 }
 
 .footer-end {
@@ -291,9 +293,16 @@ footer div img {
         flex-direction: row;
     }
 
+    .footer-links-1,
+    .footer-links-2 {
+        align-self: start;
+        margin: 0;
+    }
+
     .footer-links img {
         width: 10%;
         align-self: flex-start;
+        
     }
 
     .footer-end {
@@ -313,6 +322,7 @@ footer div img {
         margin-top: .5rem;
     }
 }
+
 @media (min-width: 962px) {
 
        
